--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -1,3 +1,197 @@
 {
-    "callToAction": "Join the Adventure"
+    "callToAction": "Join the Adventure",
+    "editionNumber": "35th Edition",
+    "home": "Home",
+    "guests": "Guests",
+    "courses": "Courses",
+    "conferences": "Conferences",
+    "instructors": "Instructors",
+    "partners": "Partners",
+    "organizers": "Organizatori",
+    "signUp": "Sign Up",
+    "whatIsAtlantykron": "What's Atlantykron?",
+    "shortDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero",
+    "science": "Science",
+    "scienceDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "art": "Art",
+    "artDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "culture": "Culture",
+    "cultureDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "sport": "Sport",
+    "sportDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "seeAllCourses": "See all courses",
+    "guestsShowcase": " Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero",
+    "seeAllGuests": "See all guests",
+    "firstRomanianCosmonaut": "First Romanian Cosmonaut",
+    "presidentOfTheCenterForPeace": "President of the UNESCO Center for Peace",
+    "worldGenesisFoundationFounder": "World Genesis Foundation Founder",
+    "presidentOfTheCenterForComplexStudies": "President of the Center for Complex Studies",
+    "scienctistAtNASA": "Scientist at NASA JPL", 
+    "authorOfFizicaPovestita": "Author \"Fizica Povestită\" (Physics through Stories)",
+    "typicalDay": "A typical day in an atypical camp",
+    "typicalDayDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "findOutMore": "Find out more",
+    "participationGuide": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "goToGuide": "Participation Guide",
+    "gallery": "Gallery",
+    "location": "Location",
+    "officialPartners": "Official Partners",
+    "organizedBy": "An event organized and supported by",
+    "privacyPolicy": "Privacy Policy",
+    "copyright": "© Copyright Atlantykron 2023 – All rights reserved",
+    "selectYear": "Select year",
+    "organizingNGOs": "Organizing NGOs",
+    "governmentAgencies": "Government Agencies",
+    "sponsors": "Sponsors",
+    "mediaPartners": "Media Partners",
+    "organizigTeam": "The organizing team is offering its time voluntarily to ensure you have an enjoyable experience while participating in the Academy",
+    "yourEmail": "*Your e-mail address",
+    "message": "*Message",
+    "send": "Send",
+    "emailSuccess": "We've received your e-mail!",
+    "emailBlank": "The e-mail is wrong or your message is blank",
+    "emailError": "Sorry! Your e-mail coulnd't be sent",
+    "years": "Years",
+    "year": "Year",
+    "onTheIsland": "on the island: ",
+    "title": "Title: ",
+    "description": "Description: ",
+    "date": "Date: ",
+    "category": "Category: ",
+    "conferenceType": "Conference type: ",
+    "virtual": "Virtual",
+    "Știință": "Science",
+    "Artă": "Art",
+    "Cultură": "Culture",
+    "Sport": "Sport",
+    "password": "*Password",
+    "login": "Login",
+    "emailOrPasswordWrong": "E-mail address or password is wrong",
+    "continueGoogle": "Continue with Google",
+    "continueFacebook": "Continue with Facebook",
+    "or": "Or",
+    "forgotPassword": "Forgot your password?",
+    "clickHere": "Click Here",
+    "register": "Register",
+    "alreadyHaveAccount": "Already have an account?",
+    "confirmPassword": "*Confirm Password",
+    "passwordMustHave6OrMore": "*The password must have at least 6 characters",
+    "registrationAgreement": "*By signing up you agree with our",
+    "registerError": "E-mail address is wrong or the password does not meet the required criteria",
+    "selectStep": "Select Step",
+    "logisticsDirector": "Logistics Director",
+    "logisticsDirectorDescription": "The maintenance of installations, security, and various operations for hundreds of guests are not easy tasks, but Cristian and his team make them seem as simple as a walk on the island on a warm summer day.",
+    "coastGuard": "Coast Guard",
+    "dockedNear": "Docked near the island",
+    "bucharestRailStation": "Bucharest North Rail Station",
+    "boat": "Capidava Boat",
+    "canteen": "Atlantykron Canteen",
+    "orgTeam": "ORGANIZING TEAM",
+    "orgTeam1": "The academy attracts and involves prominent instructors in their fields from Europe and around the world. The participation of these instructors, some of the best in their field, offers a remarkable educational and life experience for the young people who participate.",
+    "orgTeam2": "At the academy, participants share not only class hours but also the experience of living alongside these specialists, having the opportunity to connect with them and learn about many aspects of life outside of standard lessons.",
+    "orgTeam3": "There is also a highly structured on-site organizing team, which includes general program coordinators, logistics directors, alternative program coordinators, team leaders, and security teams. This ensures that all the needs of the participating youth are understood and resolved and that they have a pleasant and safe experience.",
+    "orgTeam4": "All program coordinators, instructors, guests, and the entire organizing team ",
+    "orgTeam4Bold": "offer their time and effort voluntarily ",
+    "orgTeam5": "to ensure the participants have the most enjoyable experience at the academy. In this way, we can keep the participation cost low and open up the opportunity for a wider range of participants to attend the Academy.",
+    "whoCan": "WHO CAN PARTICIPATE?",
+    "whoCan1": "The academy is recommended for young people between the ages of 16 and 29. Those under the age of 16 can only participate accompanied by an adult. The accompanying adult assumes full responsibility for the behavior on the island, as well as for the safety of the person under the age of 16. Individuals over the age of 29 can participate by acknowledging that the program is designed for young people and that the entire framework in which the academy takes place is natural, with camping conditions.",
+    "whoCan2": "Anyone interested in participating must register online at www.atlantykron.org using a Facebook, Google, or a combination Email Password profile. Registration is only completed after receiving the acceptance email. Individuals who cannot present a valid acceptance email are not accepted into the academy registration procedure.",
+    "security": "ISLAND SECURITY",
+    "security1": "Ensuring a safe and relaxing period is the main priority of the academy coordinators. It is characteristic that, in addition to the dedicated island guards, the Border Police are constantly present on the island. In addition, each instructor, team leader, and program coordinator oversees all activities, supporting security teams.",
+    "security2": "To ensure everyone's security ",
+    "security2Bold": "access to the island is only allowed for registered individuals who wear a visible bracelet.",
+    "security3": "On the first day, participant registration takes place in Cernavoda according to the official program. On any other day, it is the duty of participants to contact the registration team as soon as they arrive on the island.",
+    "transport": "TRANSPORT",
+    "transport1": "Arrange with the organizers of the Academy to meet you and take you to the venue of the program. You can contact us at inscrieri@atlantykron.org.",
+    "transport2": "Use the public transport system in Romania (see instructions):   ",
+    "transport3": "From the airport, take a taxi to the North Train Station in Bucharest. The journey takes approximately 25 minutes and the price is around 16 € (Euros) or 55 RON (Romanian Leu).",
+    "transport4": "From Bucharest's North Train Station, take a fast train to Cernavoda. This journey will take about two hours and will cost around 12 € or 42 RON.",
+    "transport5": "From Cernavodă railway station, you need to reach the village of Capidava, and there are two options: you can take the bus which departs twice a day, at 11:30 and 15:30, or you can take a taxi to cover the last 25 minutes to the village.",
+    "transport6": "After reaching Capidava village, you will need to take a short walk and then a boat to get to the island where the Academy takes place. The island is visible in the middle of the Danube river.",
+    "transport7": "From inside Romania: Take the train or a taxi to the city of Cernavoda, the closest train station to the Academy, and then follow steps 2 and 3 as mentioned above.",
+    "transport8": "With a personal car: It is possible to reach the vicinity of the island with a personal car, but this is not encouraged. As it is a wild place, the Academy cannot be held responsible for losses and damages that may occur in the parking areas outside the island.",
+    "rustic": "WE ARE „RUSTIC”",
+    "rustic1": "Participating in this program in a wild setting is part of what makes the Academy a unique life and educational experience. It is also important to understand what the conditions are. The following provides some general information. If you have any questions, please contact us at ",
+    "foodAndHygiene": "FOOD AND HYGIENE",
+    "foodAndHygiene1": "Meals are provided twice a day by the Academy. Please refer to the registration form for pricing details. Additionally, there is an open-air cafe on the island that is open daily from 07:00 to 24:00, where food, beverages, and other goods can be purchased.",
+    "foodAndHygiene2": "Bottled water is also provided for all participants. Although the local water is safe for washing, it's important to remember that it's not suitable for drinking. Showers are available in certain places on the island or on the ferries.",
+    "accommodation": "ACCOMMODATION",
+    "accommodation1": "In general, all participants sleep in tents in their designated area on the island. Participants are encouraged to bring their own tents and sleeping bags. If you are unable to bring a tent, please mention it when you register and the organizers will try to assist you.",
+    "accommodation2": "Cabins on the boats anchored on the island's shore are available for some of the guests. However, it is important to note that their number is limited. If you have special needs that require accommodation in a cabin, please indicate this in the registration form.",
+    "trash": "WASTE MANAGEMENT",
+    "trash1": "Protecting the environment on the island is very important for the Academy. Instructions for garbage disposal will be given to all participants upon arrival. In addition, toilets are available on the island and on the ferries for participants to use.",
+    "participants": "PARTICIPANTS",
+    "participants1": "One of the best parts of the Academy is the people you will meet. Always a friendly environment, you can be sure to make many new friends during the event. The main languages used are Romanian and English. An estimate would be that 50% of the participants speak English well, 25% intermediate, and 25% with some difficulty. If necessary, anyone is willing to lend a hand with translations. Of course, there are many opportunities to improve your knowledge of many other languages with the help of the wide variety of participants.",
+    "aTypicalDayGuide": "A TYPICAL DAY",
+    "aTypicalDayGuide1": "After breakfast, the morning programs start and last until lunchtime. After that, all participants spend their free time on the beach, reading, learning, practicing sports or just chatting with friends. In the mid-afternoon, the programs resume and last until dinner, followed by presentations and performances in the open-air amphitheater. The evening program also includes a review of the events for the following day and is usually followed by a movie or dance on board a boat.",
+    "ensureLogged": "Make sure you have an account and you are logged in to fill in the sign up form.",
+    "youCanLogIn": "You can log in/sign up",
+    "here": "here",
+    "allFieldsAreMandatory": "All fields are mandatory",
+    "surname": "*Surname",
+    "firstName": "*First Name",
+    "age": "*Age",
+    "areYouCaretaker": "*Are you a caretaker of a participant/participants under the age of 16?",
+    "yes": "Yes",
+    "no": "No",
+    "caretakerOf": "*Participants you are accompanying",
+    "caretaker": "*Person who is accompanying you",
+    "occupation": "*Occupation",
+    "residency": "*City of residence",
+    "participatedBefore": "*Have you participated to previous editions?",
+    "howDidYouFindOut": "*How did you find out about Atlantykron?",
+    "pick5Courses": "*Pick 5 courses you will attend",
+    "pickOption": "*Pick an option",
+    "infoTax": "The participation fee and meals (lunch and dinner, priced at 60 RON per day) are included in this price. For minors (under 18), the meal package is mandatory. Meals will be provided from July 30th to August 4th.",
+    "howPay": "How do you choose to pay? Bank transfer benefits from a 20 lei discount.",
+    "bankDetails": "Detalii transfer bancar:",
+    "bankAccount": "Account: RO78RNCB0116172543400001",
+    "beneficiary": "Beneficiary: Asociaţia Atlantykron Topalu",
+    "transactionDetails": "Detalii Tranzacţie: Nume + Opţiunea aleasă (8/2 zile cu/fară masă)",
+    "finalPrices": "* final prices for the bank transfer",
+    "package1": "- 580 (8 days with meals included)",
+    "package2": "- 270 (2 days with meals included)",
+    "package3": "- 250 (8 days without meals included)",
+    "package4": "- 150 (2 days without meals included)",
+    "dietaryPreferences": "*Dietary preferences",
+    "finish": "Submit",
+    "rules1": "",
+    "rules2": "",
+    "rules3bold": "",
+    "rules3": "",
+    "rules4bold": "",
+    "rules4": "",
+    "rules5bold": "",
+    "rules5": "",
+    "rules6": "",
+    "rules6bold": "",
+    "rules6cont": "",
+    "rules7": "",
+    "rules7bold": "",
+    "rules7cont": "",
+    "rules8bold": "",
+    "rules8": "",
+    "rules9bold": "",
+    "rules9": "",
+    "rules10bold": "",
+    "rules10": "",
+    "rules11bold": "",
+    "rules11": "",
+    "rules12bold": "",
+    "rules12": "",
+    "rules13": "",
+    "rules14": "",
+    "rules15": "",
+    "rules16": "",
+    "rules17": "",
+    "rules18": "",
+    "rules18bold": "",
+    "rules18cont": "",
+    "rules19bold": "",
+    "rules19cont": "",
+    "rules20": "",
+    "rules20link": "",
+    "rules20cont": "",
+    "rules21": "",
+    "rules22": ""
 }
