--- a/src/assets/localization/ro.json
+++ b/src/assets/localization/ro.json
@@ -1,3 +1,196 @@
 {
-    "callToAction": "Înscrie-te în Aventură"
-}
+    "callToAction": "Înscrie-te în Aventură",
+    "editionNumber": "Ediția 35",
+    "home": "Acasă",
+    "guests": "Invitați",
+    "courses": "Cursuri",
+    "conferences": "Conferințe",
+    "instructors": "Instructori",
+    "partners": "Parteneri",
+    "organizers": "Organizatori",
+    "signUp": "Înscrieri",
+    "whatIsAtlantykron": "Ce este Atlantykron?",
+    "shortDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero",
+    "science": "Știință",
+    "scienceDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "art": "Artă",
+    "artDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "culture": "Cultură",
+    "cultureDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "sport": "Sport",
+    "sportDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "seeAllCourses": "Vezi toate cursurile",
+    "guestsShowcase": " Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero",
+    "seeAllGuests": "Vezi toți invitații",
+    "firstRomanianCosmonaut": "Primul Cosmonaut Român",
+    "presidentOfTheCertainForPeace": "Președinte Centrul Pentru Pace Unesco",
+    "worldGenesisFoundationFounder": "Fondatoare World Genesis Foundation",
+    "presidentOfTheCenterForComplexStudies": "Președinte Centrul de Studii Complexe",
+    "scienctistAtNASA": "Om de Știință NASA Jet Propulsion Laboratory", 
+    "authorOfFizicaPovestita": "Autor \"Fizica Povestită\"",
+    "typicalDay": "O zi tipică într-o tabără atipică",
+    "typicalDayDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "findOutMore": "Află Mai Multe",
+    "participationGuide": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "goToGuide": "Ghid Participare",
+    "gallery": "Galerie",
+    "location": "Locația",
+    "officialPartners": "Parteneri Oficiali",
+    "organizedBy": "Un eveniment organizat și sprijinit de către",
+    "privacyPolicy": "Privacy Policy",
+    "copyright": "© Copyright Atlantykron 2023 – Toate drepturile rezervate",
+    "selectYear": "Selectați anul",
+    "organizingNGOs": "ONG-uri Organizatoare",
+    "governmentAgencies": "Agenții Guvernamentale",
+    "sponsors": "Susținători",
+    "mediaPartners": "Parteneri Media",
+    "organizigTeam": "Echipa de organizare iși oferă timpul și efortul în mod voluntar pentru a-ți asigura o experientă cât mai placută în cadrul Academiei.",
+    "yourEmail": "*Adresa ta de e-mail",
+    "message": "*Mesajul",
+    "send": "Trimite",
+    "emailSuccess": "E-mail trimis cu succes!",
+    "emailBlank": "Adresa e-mail este greșită sau mesajul este gol",
+    "emailError": "Ne pare rau, mesajul nu a putut fi trimis",
+    "years": "Ani",
+    "year": "An",
+    "onTheIsland": "pe insulă: ",
+    "title": "Titlu: ",
+    "description": "Descriere: ",
+    "date": "Data: ",
+    "category": "Categorie: ",
+    "conferenceType": "Tip Conferință: ",
+    "virtual": "Virtuală",
+    "Știință": "Știință",
+    "Artă": "Artă",
+    "Cultură": "Cultură",
+    "Sport": "Sport",
+    "password": "*Parolă",
+    "login": "Logare",
+    "emailOrPasswordWrong": "Adresa email sau parola este greșită",
+    "continueGoogle": "Continuă cu Google",
+    "continueFacebook": "Continuă cu Facebook",
+    "or": "Sau",
+    "forgotPassword": "Ai uitat parola?",
+    "clickHere": "Click Aici",
+    "register": "Înregistrare",
+    "alreadyHaveAccount": "Ai deja un cont?",
+    "confirmPassword": "*Confirmare Parolă",
+    "passwordMustHave6OrMore": "*Parola trebuie să conțină mai mult de 6 caractere",
+    "registrationAgreement": "*Înregistratea pe acest site înseamnă ca sunteți implicit de acord cu",
+    "registerError": "Adresa e-mail este greșită sau parola nu respectă regulile",
+    "selectStep": "Selectați Pasul",
+    "logisticsDirector": "Director Logistic",
+    "logisticsDirectorDescription": "Întreţinerea instalaţiilor, securitatea, diversele operaţiuni pentru sutele de oaspeţi nu sunt treburi uşoare, dar Cristian şi echipa lui le fac să pară la fel de simple ca o plimbare pe insulă într-o zi caldă de vară.",
+    "coastGuard": "Paza de coasta",
+    "dockedNear": "Acostare langa insula",
+    "bucharestRailStation": "Gara de Nord",
+    "boat": "Barca de la capidava",
+    "canteen": "Cantina Atlantykron",
+    "orgTeam": "ECHIPA ORGANIZATOARE",
+    "orgTeam1": "Academia atrage şi implică instructori proeminenţi în domeniile lor din Europa şi din lume. Participarea acestor instructori, unii dintre cei mai buni, oferă o experienţă educativă şi de viaţă remarcabilă pentru tinerii care participă.",
+    "orgTeam2": "La Academie, participanţii împărtăşesc nu numai ore de curs, dar şi experienţa de a trăi alături de aceşti specialişti, având ocazia de a fi în legătură cu ei şi de a învăţa despre multe aspecte ale vieţii în afara lecţiilor standard.",
+    "orgTeam3": "Există de asemenea la faţa locului o echipă de organizare foarte bine structurată, care include coordonatori generali de programe, directori de logistică, coordonatori alternativi de programe, lideri de echipă şi echipe de securitate. Acest lucru asigură faptul că toate nevoile tinerilor care participă sunt înţelese şi rezolvate şi că au parte de o experienţă plăcută şi sigură.",
+    "orgTeam4": "Toti coordonatorii de programe, instructorii, invitatii si intreaga echipa de organizare ",
+    "orgTeam4Bold": "isi oferta timpul si efortul in mod voluntar ",
+    "orgTeam5": "pentru a le asigura participantilor o experienta cat mai placuta in cadrul Academiei. In acest fel putem mentine un cost scazut de participare si deschide oportunitatea de a participa in cadrul Academiei unei categorii cat mai largi de participanti.",
+    "whoCan": "CINE POATE PARTICIPA?",
+    "whoCan1": "Academia este recomandată tinerilor cu vârsta între 16 și 29 de ani. Persoanele mai tinere de 16 ani pot participa doar însoțite de un adult. Adultul insotitor isi asuma intreaga responsabilitatea atat pentru comportamentul pe insula, cat si pentru pastrarea in siguranta a persoanei sub 16 ani. Persoanele cu vârsta de peste 29 de ani pot participa asumându-și faptul că programul este construit pentru tineri și că tot cadrul în care se desfășoară Academia este unul natural, condițiile fiind unele de camping.",
+    "whoCan2": "Oricine este interesat să participe trebuie să se înregistreze online pe adresa www.atlantykron.org folosind un profil de Facebook, Google sau o combinatie Email Parola. Inscrierea este finalizata doar dupa receptionarea emailului de acceptare. Persoanele care nu pot prezenta un email valid de acceptare nu sunt acceptate in procedura de inregistrare a Academiei.",
+    "security": "SECURITATEA INSULEI",
+    "security1": "Asigurarea unei perioade sigure şi relaxante este prioritatea principală a coordonatorilor Academiei. Caracteristic este faptul că, pe lângă paznicii devotaţi de pe insulă, Poliţia de Frontieră este în permanenţă prezentă pe insulă. În plus, fiecare instructor, lider de echipă şi coordonator de programe supraveghează toate activităţile, sprijinind echipele de securitate.",
+    "security2": "Pentru siguranta noastra, a tuturor, prezenta pe insula este permisa doar persoanelor inregistrate si care poarta bratara intr-un loc vizibil. ",
+    "security3": "In prima zi inregistrarea participantilor se face la Cernavoda, conform programului oficial. In orice alta zi, este indatorirea participantilor sa contacteze echipa de inregistrare in cel mai scurt timp de la sosirea pe insula.",
+    "transport": "TRANSPORT",
+    "transport1": "Aranjaţi cu organizatorii Academiei să vă întâlnească şi să vă conducă la locul de desfăşurare al programului. Ne puteţi contacta la inscrieri@atlantykron.org.",
+    "transport2": "Folosiţi sistemul public de transport din România (vezi instrucţiunile):",
+    "transport3": "De la aeroport luaţi un taxi până la Gara de Nord din Bucureşti. Durata călătoriei este de aproximativ 25 de minute iar preţul în jur de 16 € (Euro) sau 55 RON",
+    "transport4": " De la Gara de Nord din Bucureşti, luaţi un tren rapid către Cernavodă. Această călătorie va dura circa două ore şi va costa cam 12 € sau 42 RON. ",
+    "transport5": " De la gara Cernavodă trebuie să ajungeţi în satul Capidava, pentru care există două opţiuni: luaţi autobuzul care pleacă de două ori pe zi, la 11:30 şi la 15:30, sau un taxi pentru a parcurge ultimele 25 de minute până în sat. ",
+    "transport6": " Din sat se merge puţin pe jos şi faceţi un drum scurt cu barca până la insula Academiei, vizibilă în mijlocul fluviului Dunărea ",
+    "transport7": "Din interiorul României: Luaţi trenul sau taxiul până în oraşul Cernavodă, gara cea mai apropiată de Academie, apoi urmaţi paşii 2 şi 3 de mai sus.",
+    "transport8": "Cu automobilul personal: Se poate ajunge cu automobilul până în apropierea insulei, dar acest lucru nu este încurajat. Deoarece este un loc sălbatic, Academia nu poate răspunde pentru pierderile şi daunele care se pot întâmpla în locurile de parcare din afara insulei",
+    "rustic": "SUNTEM „RUSTICI”",
+    "rustic1": "Participarea la acest program într-un decor sălbatic e o parte din ceea ce face ca Academia să fie o experienţă specială de viaţă şi de educaţie. Este de asemenea important să înţelegeţi care sunt condiţiile. Ceea ce urmează oferă nişte date generale. Dacă aveţi întrebări, vă rugăm contactaţi-ne la",
+    "foodAndHygiene": "HRANĂ ŞI IGIENĂ",
+    "foodAndHygiene1": "Masa este disponibilă din partea Academiei de două ori pe zi. Vezi formularul de înscriere pentru detaliile legate de preţ. În plus, există o cafenea în aer liber instalată pe insulă, deschisă zilnic între 07:00 şi 24:00, unde se pot cumpăra alimente, băuturi şi alte mărfuri.",
+    "foodAndHygiene2": "De asemenea, se asigură apă îmbuteliată pentru toţi participanţii. Deşi apa locală este sigură pentru spălat, este important să vă aduceţi aminte că nu este bună de băut. În anumite locuri de pe insulă sau pe bacuri sunt disponibile duşuri.",
+    "accommodation": "CAZARE",
+    "accommodation1": "În general toţi participanţii dorm în corturi, în zona grupului lor de pe insulă. Participanţii sunt încurajaţi să-şi aducă propriile corturi şi saci de dormit. Dacă nu puteţi face rost de un cort, vă rugăm menţionaţi acest lucru când vă înscrieţi şi organizatorii vor încerca să vă ajute.",
+    "accommodation2": "Cabinele de pe bacurile ancorate la malul insulei sunt disponibile pentru unii dintre invitaţi. Cu toate acestea, este important să notaţi că numărul lor este limitat. Dacă aveţi nevoi speciale care presupun cazarea într-o cabină, vă rugăm indicaţi acest lucru în formularul de înregistrare.",
+    "trash": "DEPOZITAREA DEŞEURILOR",
+    "trash1": "Protejarea mediului pe insulă este foarte important pentru Academie. Instrucţiunile pentru depozitarea gunoiului vor fi date tuturor participanţilor la sosire. De asemenea, pe insulă şi pe bacuri sunt disponibile toalete pentru uzul participanţilor.",
+    "participants": "PARTICIPANŢII",
+    "participants1": "Una dintre cele mai bune părţi ale Academiei sunt oamenii pe care-i veţi cunoaşte. Mereu un mediu prietenos, puteţi fi siguri că vă veţi face mulţi noi prieteni în timpul evenimentului. Principalele limbi folosite sunt româna şi engleza. O estimare ar fi că 50% dintre participanţi vorbesc bine engleza, 25% mediu şi 25% cu oarecare dificultăţi. Dacă este nevoie, oricine este dispus să dea o mână de ajutor la traduceri. Desigur, există multe ocazii de a-ţi perfecţiona cunoştinţele în multe alte limbi cu ajutorul marii varietăţi de participanţi.",
+    "aTypicalDayGuide": "O ZI TIPICĂ",
+    "aTypicalDayGuide1": "După micul dejun încep programele de dimineaţă, care durează până la masa se prânz. După aceea toţi participanţii îşi petrec timpul liber pe plajă, citind, învăţând, practicând sporturi sau doar vorbind cu prietenii. La mijlocul după-amiezii reîncep programele, care ţin până la cină, apoi au loc prezentările şi spectacolele în amfiteatrul în aer liber. Programul de seară mai include o trecere în revistă a evenimentelor zilei următoare şi este urmat de obicei de un film sau dans la bordul unui bac.",
+    "ensureLogged": "Asigură-te că ai un cont și ești logat pe site pentru a completa formularul.",
+    "youCanLogIn": "Te poți loga/înregistra",
+    "here": "aici",
+    "allFieldsAreMandatory": "Toate câmpurile sunt obligatorii",
+    "surname": "*Nume",
+    "firstName": "*Prenume",
+    "age": "*Vârstă",
+    "areYouCaretaker": "*Sunteţi însoţitor pentru un participant/paticipanţi cu vâsta sub 16 ani?",
+    "yes": "Da",
+    "no": "Nu",
+    "caretakerOf": "*Paticipanţi pe care îi însoţiţi",
+    "caretaker": "*Numele persoanei care vă însoţeşte",
+    "occupation": "*Ocupație",
+    "residency": "*Localitatea de reşedinţă",
+    "participatedBefore": "*Aţi mai participat la ediţiile anterioare?",
+    "howDidYouFindOut": "*Cum aţi aflat de Atlantykron?",
+    "pick5Courses": "*Alege 5 cursuri la care vei participa",
+    "pickOption": "*Ce opțiune alegi?",
+    "infoTax": "În acest preţ este inclusă taxa de participare şi masa (60 de RON pe zi -> prânz + cină). Pentru minori (sub 18 ani) pachetul de masă este obligatoriu. Masa va fi asigurată în perioada 30 Iulie - 4 August.",
+    "howPay": "Cum alegi să plateşti? Transferul bancar beneficiază de o reducere de 20 de lei",
+    "bankDetails": "Detalii transfer bancar:",
+    "bankAccount": "Cont: RO78RNCB0116172543400001",
+    "beneficiary": "Nume Beneficiar: Asociaţia Atlantykron Topalu",
+    "transactionDetails": "Detalii Tranzacţie: Nume + Opţiunea aleasă (8/2 zile cu/fară masă)",
+    "finalPrices": "* preţuri finale pentru transferul bancar:",
+    "package1": "- 580 (8 zile cu masa inclusă)",
+    "package2": "- 270 (2 zile cu masa inclusă)",
+    "package3": "- 250 (8 zile fără masa inclusă)",
+    "package4": "- 150 (2 zile fără masa inclusă)",
+    "dietaryPreferences": "*Preferinţe alimentare",
+    "finish": "Finalizare",
+    "rules1": " Academia de vară Atlantykron dorește să ofere participanților o experiență unică pe întreaga durată a evenimentului. O frumoasă armonizare cu mediul natural, cursuri și ateliere în aer liber susținute de profesioniști care excelează în domeniile lor. ",
+    "rules2": " Pentru ca aceste lucruri să fie posibile, este nevoie ca toți participanții să respecte un set minimal de reguli, atât pentru păstrarea unei atmosfere plăcute, cât și pentru desfășurarea în siguranță a activităților întreprinse. De aceea, pentru participarea la Academie, toți participanții se obligă: ",
+    "rules3bold": "să se înscrie în prealabil",
+    "rules3": "în program folosind formularul de pe site. Vor putea participa doar cei care au completat formularul. (în situații excepționale participantul se poate înscrie și după termenul limită, însă primirea sa în Academie este în continuare condiționată de acceptarea în program); ",
+    "rules4bold": "să finalizeze formalitatile de inregistrare",
+    "rules4": "– sa fie prezenti in prima zi la Cernavoda la intalnirea cu echipa de inregistrare sau sa contacteze echipa de inregistrare in cel mai scurt timp posibil de la sosirea pe insula; ",
+    "rules5bold": "să poarte asupra sa intr-un loc vizibil brățara",
+    "rules5": "primită la înregistrarea pe insulă, pe toată durata Academiei; ",
+    "rules6": "să pasteze un ",
+    "rules6bold": "comportament adecvat fata de instructori, invitati si organizatori,",
+    "rules6cont": "intelegand faptul ca toti instructorii, invitatii si intreaga echipa de organizare isi oferta timpul si efortul in mod voluntar pentru desfasurarea Academiei; ",
+    "rules7": "să păstreze o atitudine respectuoasă",
+    "rules7bold": " față de toți ceilalți participanți. ",
+    "rules7cont": "să păstreze curățenia pe întreg spațiul insulei;",
+    "rules8bold": "să respecte indicațiile ",
+    "rules8": "primite din partea organizatorilor; ",
+    "rules9bold": "să se scalde și să facă focul doar cu aprobarea ",
+    "rules9": "si numai în locurile desemnate de organizatori; ",
+    "rules10bold": "să nu folosească sau să monteze instalații electrice neautorizate ",
+    "rules10": "(pentru încărcarea telefoanelor sau altor dispozitive vor fi instalate puncte speciale în acest sens); ",
+    "rules11bold": "să utilizeze cu discernământ rețeaua de internet ",
+    "rules11": "pusă la dispoziție și să respecte indicațiile primite în acest sens; ",
+    "rules12bold": "să nu organizeze activități independente după lasarea întunericului; ",
+    "rules12": "să nu introducă pe insulă băuturi alcoolice; ",
+    "rules13": "să nu introducă pe insulă și să nu consume substanțe interzise, stupefiante sau halucinogene.",
+    "rules14": "*Nerespectarea atrage după sine notificarea autorităților și măsurile care se impun confor legii.",
+    "rules15": "Organizatorii își rezervă dreptul de a exclude din cadrul Academiei orice persoană, fără a oferi explicații. Setul de reguli anterior este unul minimal. ",
+    "rules16": "Academia se adreseaza tinerilor cu vârsta între 16 și 29 de ani. ",
+    "rules17": "",
+    "rules18": "",
+    "rules18bold": "",
+    "rules18cont": "",
+    "rules19bold": "Participanții cu vârsta sub 18 ani, ",
+    "rules19cont": "trebuie ca la înregistrare: ",
+    "rules20": "să prezinte",
+    "rules20link": "scrisoarea de consimțământ",
+    "rules20cont": "din partea părinților sau a tutorelui legal (daca nu sunt insotiti de parinte sau tutore). ",
+    "rules21": " să achite integral bonurile de masă, pentru întreaga perioadă a evenimentului. ",
+    "rules22": "     Vom afișa în curând propunerea de meniu din partea furnizorului nostru. Costul estimativ al mesei pentru 6 zile este de 360 lei. "
+}   
